[package]
name = "aosc-mingzhengbu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "^1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
eyre = "0.6"
serde = { version = "^1", features = ["derive"] }
url = "2.5"
dotenvy = "0.15"
once_cell = "1.19"
reqwest = "0.11"