[package]
name = "minzhengbu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "^1", features = ["derive"] }
dotenvy = "0.15"
once_cell = "1.19"
reqwest = "0.11"
dashmap = "5.5.3"
rand = "0.8.5"
redis = { version = "0.24", features = ["tokio-comp"] }
serde_json = "1.0.108"
